I have noticed that in the Korean language on mobile chrome-based browsers, words are wrapped in the base select field. Wrapping in this field is no longer allowed.

--- a/docs/css/custom.css
+++ b/docs/css/custom.css
@@ -48,6 +48,10 @@ select {
   background-position: left -1px;
   background-repeat: no-repeat;
   background-size: auto 21px;
+  text-wrap: nowrap;
+  option {
+    text-align: left !important;
+  }
 }
 
 .footer-links > li > a {
